--- a/remote/production/Caddyfile
+++ b/remote/production/Caddyfile
@@ -1,4 +1,9 @@
-http://greenlight.abdulalsh.com {
+# Set the email address that should be used to contact you if there is a problem with
+# your TLS certificates.
+{
+  email mrabdulrahmandev@gmail.com
+}
+greenlight.abdulalsh.com {
   respond /debug/* "Not Permitted" 403
   reverse_proxy localhost:4000
 }
